--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@azure/cosmos": "^4.0.0",
     "cors": "^2.8.5",
-    "@azure/cosmos": "^4.0.0"
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=16.0.0"
